--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -26,9 +26,13 @@
 			max-width: 1100px
 
 			h1
-				display: inline
+				display: inline-block
 				font: normal 12px/32px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 				margin: 0
+				width: 60%
+				text-overflow: ellipsis
+				overflow: hidden
+				white-space: nowrap
 
 				.iconwrap
 					float: left
