--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -137,8 +137,12 @@
 
                         h2
                             font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-                            margin: 10px 0 8px 0
+                            margin: 15px 0 8px 0
                             display: inline-block
+
+                            a
+                                border-bottom: 1px solid #e07a00
+                                color: #e07a00
                         p
                             width: 100%
                             font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
@@ -148,6 +152,10 @@
 
                             .other-locations
                                 border-bottom: 1px dashed #000
+                                margin-right: 5px
+
+                            a
+                                text-decoration: underline
 
                         .actions
                             position: absolute
