Positioned the loader inside the silver pencil

--- a/css/sass/pencils.sass
+++ b/css/sass/pencils.sass
@@ -85,6 +85,11 @@
 	@include transition(opacity,0.2s)
 	opacity: 0.9
 
+	img
+		margin: 7px 0 0 6px
+		height: 16px
+		width: 16px
+
 	span
 		height: 16px
 		width: 16px
