--- a/css/eze.css
+++ b/css/eze.css
@@ -802,6 +802,10 @@
   -o-transition: opacity 0.2s ease-out;
   transition: opacity 0.2s ease-out;
   opacity: 0.9; }
+  .attribute-direct-edit img {
+    margin: 7px 0 0 6px;
+    height: 16px;
+    width: 16px; }
   .attribute-direct-edit span {
     height: 16px;
     width: 16px;
