--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -22,10 +22,13 @@
                 float: left
                 margin: 9px 5px 0 5px
 
-            .sort-by
+            .table-toggles
                 float: right
                 position: relative
                 z-index: 1
+
+                .sort-by, .show-content-toggle
+                    float: right
 
                 h2
                     float: left
@@ -44,6 +47,9 @@
 
                     &.active
                         opacity: 1
+
+            .show-content-toggle
+                margin-right: 10px
 
         .eze-table-content
             position: absolute
