--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -27,7 +27,14 @@
 		h2
 			font: bold 14px/14px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
+	.semi-direct
+		width: 620px
 
+		form
+			margin: 0
+
+		.heading, .label-required
+			display: none
 
 
 
