--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -130,7 +130,7 @@
 			background-position: -448px 0
 		.eze-more
 			background-position: -512px 0
-		.eze-devices
+		.eze-preview
 			background-position: -576px 0
 		.eze-publish
 			background-position: -640px 0
@@ -163,10 +163,19 @@
 			font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 			margin: 0 0 10px 0
 
+		h4
+			font: bold 14px/14px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			margin: 5px 0 10px 0
+
 		.eze-autosave
 			position: absolute
 			top: 6px
 			right: 0
+
+		input[type="text"]
+			width: 100%
+			box-sizing: border-box
+			padding: 14px 4px 12px 8px
 
 
 
