Loading for Find

--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -64,6 +64,19 @@
             -webkit-overflow-scrolling: touch
             -webkit-transform: translateZ(0)
 
+            .loading-wrap
+                position: absolute
+                top: 0
+                left: 0
+                right: 0
+                bottom: 0
+                background: rgba(255,255,255,0.8)
+                text-align: center
+                z-index: 100
+
+                img
+                    margin: 50px 0 0 0
+
             .loading-bar
                 background: rgb(10,10,10)
                 background: rgba(0,0,0,0.7)
