--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -111,6 +111,7 @@
 		margin-bottom: 10px
 		height: 25px
 		font-size: 12px
+		zoom: normal
 
 	.chzn-container-single .chzn-single, select, input[type="file"]
 		height: 25px
