--- a/css/eze.css
+++ b/css/eze.css
@@ -48,6 +48,17 @@
     border: 1px solid #e4e3e3;
     -webkit-overflow-scrolling: touch;
     -webkit-transform: translateZ(0); }
+    .eze .eze-table .eze-table-content .loading-wrap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(255, 255, 255, 0.8);
+      text-align: center;
+      z-index: 100; }
+      .eze .eze-table .eze-table-content .loading-wrap img {
+        margin: 50px 0 0 0; }
     .eze .eze-table .eze-table-content .loading-bar {
       background: #0a0a0a;
       background: rgba(0, 0, 0, 0.7);
@@ -1560,7 +1571,8 @@
   .eze select, .eze .chzn-container {
     margin-bottom: 10px;
     height: 25px;
-    font-size: 12px; }
+    font-size: 12px;
+    zoom: normal; }
   .eze .chzn-container-single .chzn-single, .eze select, .eze input[type="file"] {
     height: 25px;
     line-height: 26px; }
