--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -172,11 +172,6 @@
 			top: 6px
 			right: 0
 
-		input[type="text"]
-			width: 100%
-			box-sizing: border-box
-			padding: 14px 4px 12px 8px
-
 
 
 	// Custom styles for different modals
@@ -193,7 +188,7 @@
 			background: #fff
 			border: 1px solid #ccc
 
-	.eze-devices-modal
+	.eze-preview-modal
 		width: 420px
 		.table
 			margin: 0
@@ -214,6 +209,9 @@
 				overflow: hidden
 				text-overflow: ellipsis
 				white-space: nowrap
+
+		.preview-url
+			width: 380px
 
 	.eze-publish-modal
 		width: 420px
