--- a/css/sass/keymedia-views.sass
+++ b/css/sass/keymedia-views.sass
@@ -35,6 +35,14 @@
 			&:hover img
 				opacity: 1
 
+			.share
+				background: #44B6EB
+				font-size: 11px
+				margin: 0 0 0 5px
+				border-radius: 4px
+				padding: 2px 4px
+				color: #fff
+
 	.more-hits
 		clear: both
 
