--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -1,4 +1,31 @@
-
+.eze, .eze *, .eze a:hover, .eze a:visited, .eze a:active
+	background: none
+	border: none
+	bottom: auto
+	clear: none
+	cursor: default
+	float: none
+	font-style: normal
+	font-weight: normal
+	height: auto
+	left: auto
+	letter-spacing: normal
+	max-height: none
+	max-width: none
+	min-height: 0
+	min-width: 0
+	overflow: visible
+	position: static
+	right: auto
+	text-align: left
+	text-decoration: none
+	text-indent: 0
+	text-transform: none
+	top: auto
+	visibility: visible
+	white-space: normal
+	width: auto
+	z-index: auto
 
 @import table
 @import mediabase
