Added chosen.js to eze namespace, and probed text-shadow

--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -21,6 +21,7 @@
 	text-decoration: none
 	text-indent: 0
 	text-transform: none
+	text-shadow: none
 	top: auto
 	visibility: visible
 	white-space: normal
@@ -40,6 +41,7 @@
 @import object-edit
 @import layout
 @import visual-style
+@import "chosen.scss"
 
 body
 	margin-left: 63px
