Fixed max-height issue in image crop, this time with a real css file

--- a/css/eze.css
+++ b/css/eze.css
@@ -1282,6 +1282,8 @@
     max-height: 100%;
     max-width: 100%;
     border: 1px solid white; }
+  .keymedia-crop .keymedia-crop-container .jcrop-holder img {
+    max-width: none; }
 
 .eze .eze-object-translations {
   background: white;
