--- a/css/sass/keymedia-views.sass
+++ b/css/sass/keymedia-views.sass
@@ -69,19 +69,12 @@
 				background: #fff
 				color: #000
 
-	.keymedia-crop-container
-		position: absolute
-		top: 70px
-		left: 15px
-		right: 15px
-		bottom: 15px
+.keymedia-crop-container
 
-		img
-			max-height: 100%
-			max-width: 100%
-			border: 1px solid #fff
 
-		.jcrop-holder img
-			max-width: none
+	img
+		max-height: none
+		max-width: none
+		border: 1px solid #fff
 
 	
