--- a/css/sass/keymedia-views.sass
+++ b/css/sass/keymedia-views.sass
@@ -65,9 +65,10 @@
 			small
 				font: normal 10px/10px "HelveticaNeue", Helvetica, Arial, sans-serif
 
-			&.cropped a
+			&.cropped a, &.cropped a:hover
 				background: #fff
 				color: #000
+				border-color: #fff
 
 .keymedia-crop-container
 
