--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -88,7 +88,7 @@
 				input[type="text"], input[type="email"], input[type="time"], input[type="date"], input[type="datetime"]
 					width: 130px
 					height: 22px
-					padding: 0 3px
+					padding: 0 3px 0 7px
 					margin: -1px 5px 0 5px
 					line-height: 22px
 
