--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -62,7 +62,6 @@
 		.eze-object-attribute-wrap  // Two and two attributes forms a grid
 			float: left
 			width: 100%
-			border-top: 1px solid #eee
 
 		.eze-object-attribute // One attribute
 			width: 50%
@@ -70,6 +69,7 @@
 			-moz-box-sizing: border-box
 			box-sizing: border-box
 			padding: 15px
+			border-top: 1px solid #eee
 			border-left: 1px solid #eee
 
 			.label-required
@@ -79,7 +79,6 @@
 				background: #eee
 
 			&.full-width
-				border-top: 1px solid #eee
 				width: 100%
 
 			&:first-child
@@ -130,6 +129,20 @@
 			.icon-calendar
 				font-size: 16px
 				vertical-align: 0
+
+		.ezauthor
+			.eze-items li .wrap
+				input[type="text"]
+					width: 33%
+				img
+					margin-left: 10px
+
+		.ezgmaplocation
+			.find-address
+				margin-left: 10px
+				
+			.pull-right
+				margin-bottom: 15px
 
 		.ezimage, .keymedia
 
