--- a/css/eze.css
+++ b/css/eze.css
@@ -886,12 +886,12 @@
   margin: 0 0 10px 0;
   -webkit-transform: translateZ(0);
   position: relative; }
-  .eze .eze-items li {
+  .eze .eze-items > li {
     margin: 0 0 5px 0;
     width: 100%;
     border-radius: 4px;
     background: #cccccc; }
-    .eze .eze-items li.notification {
+    .eze .eze-items > li.notification {
       background: rgba(250, 250, 250, 0.9);
       position: absolute;
       top: 0;
@@ -901,7 +901,7 @@
       margin: 0;
       text-align: center;
       opacity: 1; }
-      .eze .eze-items li.notification p {
+      .eze .eze-items > li.notification p {
         height: 26px;
         position: absolute;
         background: #fafafa;
@@ -910,12 +910,12 @@
         right: 0;
         margin-top: -13px;
         font: normal 20px/20px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif; }
-        .eze .eze-items li.notification p img {
+        .eze .eze-items > li.notification p img {
           margin: -4px 7px 0 0; }
-    .eze .eze-items li .wrap, .eze .eze-items li .right-align .btn, .eze .eze-items li .reorder, .eze .eze-items li .right-align {
+    .eze .eze-items > li .wrap, .eze .eze-items > li .right-align .btn, .eze .eze-items > li .reorder, .eze .eze-items > li .right-align {
       height: 34px;
       line-height: 34px; }
-    .eze .eze-items li .wrap {
+    .eze .eze-items > li .wrap {
       background: white;
       background-color: white;
       background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#f5f5f5));
@@ -929,29 +929,29 @@
       padding: 0;
       position: relative;
       overflow: visible; }
-      .eze .eze-items li .wrap .reorder {
+      .eze .eze-items > li .wrap .reorder {
         display: block;
         width: 40px;
         float: left;
         margin-right: -5px;
         background: url(../images/scrubber.png) center center no-repeat;
         cursor: move; }
-      .eze .eze-items li .wrap img {
+      .eze .eze-items > li .wrap img {
         margin: -1px 5px 0 5px; }
-      .eze .eze-items li .wrap input[type="checkbox"] {
+      .eze .eze-items > li .wrap input[type="checkbox"] {
         margin: 2px 0 0 10px; }
-      .eze .eze-items li .wrap input[type="text"], .eze .eze-items li .wrap input[type="email"], .eze .eze-items li .wrap input[type="time"], .eze .eze-items li .wrap input[type="date"], .eze .eze-items li .wrap input[type="datetime"] {
+      .eze .eze-items > li .wrap input[type="text"], .eze .eze-items > li .wrap input[type="email"], .eze .eze-items > li .wrap input[type="time"], .eze .eze-items > li .wrap input[type="date"], .eze .eze-items > li .wrap input[type="datetime"] {
         width: 130px;
         height: 22px;
         padding: 0 3px 0 7px;
         margin: -1px 5px 0 5px;
         line-height: 22px; }
-      .eze .eze-items li .wrap input.activate-time, .eze .eze-items li .wrap input.activate-date {
+      .eze .eze-items > li .wrap input.activate-time, .eze .eze-items > li .wrap input.activate-date {
         text-align: right;
         width: 35px; }
-      .eze .eze-items li .wrap input.activate-date {
+      .eze .eze-items > li .wrap input.activate-date {
         width: 90px; }
-      .eze .eze-items li .wrap .right-align {
+      .eze .eze-items > li .wrap .right-align {
         position: absolute;
         right: 0;
         top: 0px;
@@ -966,21 +966,21 @@
         background-image: -o-linear-gradient(top, white, #f5f5f5);
         background-image: linear-gradient(top, white, #f5f5f5);
         overflow: hidden; }
-        .eze .eze-items li .wrap .right-align .status-icon {
+        .eze .eze-items > li .wrap .right-align .status-icon {
           margin: 11px 10px 0 5px; }
-        .eze .eze-items li .wrap .right-align .btn {
+        .eze .eze-items > li .wrap .right-align .btn {
           background: transparent;
           border: 0;
           padding: 0 15px;
           margin: -1px 0 0 0;
           border-radius: 0;
           border-left: 1px solid #d0d0d0; }
-          .eze .eze-items li .wrap .right-align .btn:hover {
+          .eze .eze-items > li .wrap .right-align .btn:hover {
             background: white; }
-        .eze .eze-items li .wrap .right-align .btn:last-child {
+        .eze .eze-items > li .wrap .right-align .btn:last-child {
           border-top-right-radius: 4px;
           border-bottom-right-radius: 4px; }
-    .eze .eze-items li select, .eze .eze-items li .chzn-container {
+    .eze .eze-items > li select, .eze .eze-items > li .chzn-container {
       width: 110px;
       margin: 5px 5px 0 0;
       display: block;
