--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -28,7 +28,7 @@
 		-webkit-transform: translateZ(0)
 		position: relative
 
-		li
+		> li
 			margin: 0 0 5px 0
 			width: 100%
 			border-radius: 4px
