css update for comment field

--- a/css/eze.css
+++ b/css/eze.css
@@ -175,7 +175,8 @@
             color: #e07a00; }
         .eze .eze-table .eze-table-content ul li.item p {
           width: 100%;
-          font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
+          font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
+          margin: 0; }
           .eze .eze-table .eze-table-content ul li.item p img {
             margin-top: -2px; }
           .eze .eze-table .eze-table-content ul li.item p .other-locations {
@@ -203,6 +204,9 @@
     margin-top: -37px; }
     .eze .eze-table .eze-filters-wrap .input-prepend input {
       width: 100%; }
+    .eze .eze-table .eze-filters-wrap .icon-search {
+      font-size: 16px;
+      line-height: 12px; }
     .eze .eze-table .eze-filters-wrap .eze-filters {
       margin-top: 10px;
       border: 1px solid #e4e3e3;
@@ -502,33 +506,33 @@
       padding: 0 15px;
       border: 0;
       border-left: 1px solid rgba(255, 255, 255, 0.5); }
-    .eze .stack-item header .close-all {
-      height: 30px;
-      color: #bd5900;
-      background-color: #ffe2b6;
-      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffe2b6), to(#ffc368));
-      background-image: -webkit-linear-gradient(top, #ffe2b6, #ffc368);
-      background-image: -moz-linear-gradient(top, #ffe2b6, #ffc368);
-      background-image: -ms-linear-gradient(top, #ffe2b6, #ffc368);
-      background-image: -o-linear-gradient(top, #ffe2b6, #ffc368);
-      background-image: linear-gradient(top, #ffe2b6, #ffc368);
-      box-shadow: -1px 0 0 0 #ffb647;
-      font-size: 11px; }
-      .eze .stack-item header .close-all span {
-        font-size: 16px;
-        display: none; }
-    .eze .stack-item header .go-back {
-      background-color: #ffd185;
-      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffd185), to(#ff8602));
-      background-image: -webkit-linear-gradient(top, #ffd185, #ff8602);
-      background-image: -moz-linear-gradient(top, #ffd185, #ff8602);
-      background-image: -ms-linear-gradient(top, #ffd185, #ff8602);
-      background-image: -o-linear-gradient(top, #ffd185, #ff8602);
-      background-image: linear-gradient(top, #ffd185, #ff8602);
-      height: 44px;
-      color: #4c3312;
-      font-size: 12px;
-      padding: 0 20px; }
+  .eze .stack-item.first .go-back {
+    height: 30px;
+    color: #bd5900;
+    background-color: #ffe2b6;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffe2b6), to(#ffc368));
+    background-image: -webkit-linear-gradient(top, #ffe2b6, #ffc368);
+    background-image: -moz-linear-gradient(top, #ffe2b6, #ffc368);
+    background-image: -ms-linear-gradient(top, #ffe2b6, #ffc368);
+    background-image: -o-linear-gradient(top, #ffe2b6, #ffc368);
+    background-image: linear-gradient(top, #ffe2b6, #ffc368);
+    box-shadow: -1px 0 0 0 #ffb647;
+    font-size: 11px; }
+    .eze .stack-item.first .go-back span {
+      font-size: 16px;
+      display: none; }
+  .eze .stack-item.last .go-back {
+    background-color: #ffd185;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffd185), to(#ff8602));
+    background-image: -webkit-linear-gradient(top, #ffd185, #ff8602);
+    background-image: -moz-linear-gradient(top, #ffd185, #ff8602);
+    background-image: -ms-linear-gradient(top, #ffd185, #ff8602);
+    background-image: -o-linear-gradient(top, #ffd185, #ff8602);
+    background-image: linear-gradient(top, #ffd185, #ff8602);
+    height: 44px;
+    color: #4c3312;
+    font-size: 12px;
+    padding: 0 20px; }
   .eze .stack-item:nth-last-child(2) header {
     background-color: #ffc785;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#ffc785), to(#ffb365));
@@ -1072,11 +1076,11 @@
     .eze .eze-comments li .add-comment-button {
       float: right; }
     .eze .eze-comments li .add-comment {
-      margin: 5px 0 0 0;
+      margin: 15px 0 0 10px;
       padding: 0 10px 0 40px;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
-      width: 100%;
+      width: 90%;
       position: relative; }
       .eze .eze-comments li .add-comment .btn {
         position: absolute;
