--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -165,6 +165,7 @@
                         p
                             width: 100%
                             font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+                            margin: 0
 
                             img
                                 margin-top: -2px
@@ -200,6 +201,10 @@
 
             .input-prepend input
                 width: 100%
+
+            .icon-search
+                font-size: 16px
+                line-height: 12px
 
             .eze-filters
                 margin-top: 10px
