--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -249,11 +249,11 @@
 				float: right
 
 			.add-comment
-				margin: 5px 0 0 0
+				margin: 15px 0 0 10px
 				padding: 0 10px 0 40px
 				-moz-box-sizing: border-box
 				box-sizing: border-box
-				width: 100%
+				width: 90%
 				position: relative
 
 				.btn
