Main node functionallityyy

--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -1,9 +1,8 @@
-.eze, .eze *, .eze a:hover, .eze a:visited, .eze a:active
+.eze, .eze *, .eze a:visited, .eze a:active
 	background: none
 	border: none
 	bottom: auto
 	clear: none
-	cursor: default
 	float: none
 	font-style: normal
 	font-weight: normal
