--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -123,6 +123,12 @@
 						&:hover
 							background: #fff
 
+						&.radio-btn
+							padding: 0 10px
+
+							input
+								margin: -1px 2px 0 0
+
 					.btn:last-child
 						border-top-right-radius: 4px
 						border-bottom-right-radius: 4px
