--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -33,7 +33,7 @@
 					font-size: 10px
 					text-decoration: none
 					position: relative
-					pointer: cursor
+					cursor: pointer
 
 				// Group and quick action, slide in
 
