--- a/css/eze.css
+++ b/css/eze.css
@@ -1,9 +1,8 @@
-.eze, .eze *, .eze a:hover, .eze a:visited, .eze a:active {
+.eze, .eze *, .eze a:visited, .eze a:active {
   background: none;
   border: none;
   bottom: auto;
   clear: none;
-  cursor: default;
   float: none;
   font-style: normal;
   font-weight: normal;
@@ -287,7 +286,7 @@
         font-size: 10px;
         text-decoration: none;
         position: relative;
-        pointer: cursor; }
+        cursor: pointer; }
       .eze #eze-toolbar ul li div.slide-in {
         position: absolute;
         top: 0;
@@ -994,6 +993,10 @@
           border-left: 1px solid #d0d0d0; }
           .eze .eze-items > li .wrap .right-align .btn:hover {
             background: white; }
+          .eze .eze-items > li .wrap .right-align .btn.radio-btn {
+            padding: 0 10px; }
+            .eze .eze-items > li .wrap .right-align .btn.radio-btn input {
+              margin: -1px 2px 0 0; }
         .eze .eze-items > li .wrap .right-align .btn:last-child {
           border-top-right-radius: 4px;
           border-bottom-right-radius: 4px; }
