--- a/css/eze.css
+++ b/css/eze.css
@@ -761,21 +761,21 @@
       line-height: 34px; } }
 
 .eze .kp-edit-block {
-  position: relative; }
+  position: relative !important; }
 
 .eze .kp-edit-block-box, .attribute-direct-edit {
-  border-radius: 4px;
-  width: 28px;
-  height: 28px;
-  cursor: pointer;
-  position: absolute;
-  z-index: 100;
-  opacity: 0.8; }
+  border-radius: 4px !important;
+  width: 28px !important;
+  height: 28px !important;
+  cursor: pointer !important;
+  position: absolute !important;
+  z-index: 100 !important;
+  opacity: 0.8 !important; }
   .eze .kp-edit-block-box:hover, .attribute-direct-edit:hover {
-    opacity: 1; }
+    opacity: 1 !important; }
 
 .eze .kp-edit-block-box {
-  border: 1px solid black;
+  border: 1px solid black !important;
   background-color: #5c5c5c;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#5c5c5c), to(#020202));
   background-image: -webkit-linear-gradient(top, #5c5c5c, #020202);
@@ -783,68 +783,68 @@
   background-image: -ms-linear-gradient(top, #5c5c5c, #020202);
   background-image: -o-linear-gradient(top, #5c5c5c, #020202);
   background-image: linear-gradient(top, #5c5c5c, #020202);
-  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5), inset 0 1px 0 rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5), inset 0 1px 0 rgba(255, 255, 255, 0.2) !important;
   -webkit-transition: opacity 0.2s ease-out;
   -moz-transition: opacity 0.2s ease-out;
   -o-transition: opacity 0.2s ease-out;
   transition: opacity 0.2s ease-out; }
   .eze .kp-edit-block-box.active {
-    width: auto;
-    height: auto;
-    opacity: 1;
-    z-index: 101;
+    width: auto !important;
+    height: auto !important;
+    opacity: 1 !important;
+    z-index: 101 !important;
     background: black; }
     .eze .kp-edit-block-box.active ul {
-      width: auto;
-      height: auto; }
+      width: auto !important;
+      height: auto !important; }
       .eze .kp-edit-block-box.active ul li {
-        display: block;
-        opacity: 1;
-        filter: alpha(opacity=100);
-        color: #eeeeee;
-        font-size: 11px; }
+        display: block !important;
+        opacity: 1 !important;
+        filter: alpha(opacity=100) !important;
+        color: #eeeeee !important;
+        font-size: 11px !important; }
         .eze .kp-edit-block-box.active ul li.seperator {
-          background: #222222;
-          padding: 6px 0 2px 6px; }
+          background: #222222 !important;
+          padding: 6px 0 2px 6px !important; }
   .eze .kp-edit-block-box ul {
-    height: 28px;
-    width: 28px;
-    display: block;
-    overflow: hidden;
-    border-radius: 4px;
-    margin: 0;
-    cursor: pointer;
-    background: url("../images/legacy-sprite.png") -570px -40px no-repeat; }
+    height: 28px !important;
+    width: 28px !important;
+    display: block !important;
+    overflow: hidden !important;
+    border-radius: 4px !important;
+    margin: 0 !important;
+    cursor: pointer !important;
+    background: url("../images/legacy-sprite.png") -570px -40px no-repeat !important; }
     .eze .kp-edit-block-box ul li {
-      display: none;
-      opacity: 0;
-      filter: alpha(opacity=0);
+      display: none !important;
+      opacity: 0 !important;
+      filter: alpha(opacity=0) !important;
       -webkit-transition: all 0.3s ease-out;
       -moz-transition: all 0.3s ease-out;
       -o-transition: all 0.3s ease-out;
       transition: all 0.3s ease-out; }
       .eze .kp-edit-block-box ul li:first-child a {
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-        box-shadow: none;
-        border: 0; }
+        border-top-left-radius: 4px !important;
+        border-top-right-radius: 4px !important;
+        box-shadow: none !important;
+        border: 0 !important; }
       .eze .kp-edit-block-box ul li:last-child a {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px; }
+        border-bottom-left-radius: 4px !important;
+        border-bottom-right-radius: 4px !important; }
       .eze .kp-edit-block-box ul li a {
-        font: normal 12px/38px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font: normal 12px/38px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
         background: #2b2b2b;
-        border-top: 1px solid black;
-        box-shadow: inset 0 1px 0 0 #414141;
-        color: white;
-        text-decoration: none;
-        display: block;
-        padding: 0 40px 0 0;
-        height: 35px; }
+        border-top: 1px solid black !important;
+        box-shadow: inset 0 1px 0 0 #414141 !important;
+        color: white !important;
+        text-decoration: none !important;
+        display: block !important;
+        padding: 0 40px 0 0 !important;
+        height: 35px !important; }
         .eze .kp-edit-block-box ul li a strong {
-          margin-right: 5px; }
+          margin-right: 5px !important; }
         .eze .kp-edit-block-box ul li a img {
-          margin: -1px 8px 0 8px; }
+          margin: -1px 8px 0 8px !important; }
         .eze .kp-edit-block-box ul li a:hover {
           background-color: #555555;
           background-image: -webkit-gradient(linear, left top, left bottom, from(#555555), to(#2d2d2d));
@@ -853,11 +853,11 @@
           background-image: -ms-linear-gradient(top, #555555, #2d2d2d);
           background-image: -o-linear-gradient(top, #555555, #2d2d2d);
           background-image: linear-gradient(top, #555555, #2d2d2d);
-          cursor: pointer;
-          box-shadow: inset 0 1px 0 0 #676767; }
+          cursor: pointer !important;
+          box-shadow: inset 0 1px 0 0 #676767 !important; }
 
 .attribute-direct-edit {
-  border: 1px solid white;
+  border: 1px solid white !important;
   background-color: white;
   background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#ededed));
   background-image: -webkit-linear-gradient(top, white, #ededed);
@@ -872,19 +872,19 @@
   -moz-transition: opacity 0.2s ease-out;
   -o-transition: opacity 0.2s ease-out;
   transition: opacity 0.2s ease-out;
-  opacity: 0.9; }
+  opacity: 0.9 !important; }
   .attribute-direct-edit img {
-    margin: 7px 0 0 6px;
-    height: 16px;
-    width: 16px; }
+    margin: 7px 0 0 6px !important;
+    height: 16px !important;
+    width: 16px !important; }
   .attribute-direct-edit span {
-    height: 16px;
-    width: 16px;
-    display: block;
-    border-radius: 4px;
-    background: url("../images/legacy-sprite.png") -562px -25px no-repeat;
-    margin: 7px 0 0 5px;
-    cursor: pointer; }
+    height: 16px !important;
+    width: 16px !important;
+    display: block !important;
+    border-radius: 4px !important;
+    background: url("../images/legacy-sprite.png") -562px -25px no-repeat !important;
+    margin: 7px 0 0 5px !important;
+    cursor: pointer !important; }
 
 .eze .eze-autosave {
   position: relative;
