--- a/css/sass/pencils.sass
+++ b/css/sass/pencils.sass
@@ -1,113 +1,113 @@
 // The on-page-edit pencil
 
 .eze .kp-edit-block
-	position: relative
+	position: relative!important
 
 .eze .kp-edit-block-box, .attribute-direct-edit
-	border-radius: 4px
-	width: 28px
-	height: 28px
-	cursor: pointer
-	position: absolute
-	z-index: 100
-	opacity: 0.8
+	border-radius: 4px!important
+	width: 28px!important
+	height: 28px!important
+	cursor: pointer!important
+	position: absolute!important
+	z-index: 100!important
+	opacity: 0.8!important
 
 	&:hover
-		opacity: 1
+		opacity: 1!important
 
 .eze .kp-edit-block-box
-	border: 1px solid #000
+	border: 1px solid #000 !important
 	@include gradient(#5c5c5c,#020202)
-	box-shadow: 0 0 5px 3px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2)
+	box-shadow: 0 0 5px 3px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2)!important
 	@include transition(opacity,0.2s)
 	
 	&.active
-		width: auto
-		height: auto
-		opacity: 1
-		z-index: 101
+		width: auto!important
+		height: auto!important
+		opacity: 1!important
+		z-index: 101!important
 		background: #000
 		
 		ul
-			width: auto
-			height: auto
+			width: auto!important
+			height: auto!important
 
 			li
-				display: block
-				opacity: 1
-				filter: alpha(opacity = 100)
-				color: #eee
-				font-size: 11px
+				display: block!important
+				opacity: 1!important
+				filter: alpha(opacity = 100)!important
+				color: #eee!important
+				font-size: 11px!important
 
 				&.seperator
-					background: #222
-					padding: 6px 0 2px 6px
+					background: #222!important
+					padding: 6px 0 2px 6px!important
 
 	ul
-		height: 28px
-		width: 28px
-		display: block
-		overflow: hidden
-		border-radius: 4px
-		margin: 0
-		cursor: pointer
-		background: url('../images/legacy-sprite.png') -570px -40px no-repeat
+		height: 28px!important
+		width: 28px!important
+		display: block!important
+		overflow: hidden!important
+		border-radius: 4px!important
+		margin: 0!important
+		cursor: pointer!important
+		background: url('../images/legacy-sprite.png') -570px -40px no-repeat!important
 
 		li
-			display: none
-			opacity: 0
-			filter: alpha(opacity = 0)
+			display: none!important
+			opacity: 0!important
+			filter: alpha(opacity = 0)!important
 			@include transition(all, 0.3s)
 		
 			&:first-child a
-				border-top-left-radius: 4px
-				border-top-right-radius: 4px
-				box-shadow: none
-				border: 0
+				border-top-left-radius: 4px!important
+				border-top-right-radius: 4px!important
+				box-shadow: none!important
+				border: 0!important
 			
 			&:last-child a
-				border-bottom-left-radius: 4px
-				border-bottom-right-radius: 4px
+				border-bottom-left-radius: 4px!important
+				border-bottom-right-radius: 4px!important
 			
 			a
-				font: normal 12px/38px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+				font: normal 12px/38px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif!important
 				background: #2b2b2b
-				border-top: 1px solid #000
-				box-shadow: inset 0 1px 0 0 #414141
-				color: #fff
-				text-decoration: none
-				display: block
-				padding: 0 40px 0 0
-				height: 35px
+				border-top: 1px solid #000!important
+				box-shadow: inset 0 1px 0 0 #414141!important
+				color: #fff!important
+				text-decoration: none!important
+				display: block!important
+				padding: 0 40px 0 0!important
+				height: 35px!important
 
 				strong
-					margin-right: 5px
+					margin-right: 5px!important
 
 				img
-					margin: -1px 8px 0 8px
+					margin: -1px 8px 0 8px!important
 
 				&:hover
 					@include gradient(#555,#2d2d2d)
-					cursor: pointer
-					box-shadow: inset 0 1px 0 0 #676767
+					cursor: pointer!important
+					box-shadow: inset 0 1px 0 0 #676767!important
 
 .attribute-direct-edit
-	border: 1px solid #fff
+	border: 1px solid #fff!important
 	@include gradient(#ffffff,#ededed)
 	@include box-shadow-both(0,0,5px,#000,0,1px,0,rgba(255,255,255,0.2),inset)
 	@include transition(opacity,0.2s)
-	opacity: 0.9
+	opacity: 0.9!important
 
 	img
-		margin: 7px 0 0 6px
-		height: 16px
-		width: 16px
+		margin: 7px 0 0 6px!important
+		height: 16px!important
+		width: 16px!important
 
 	span
-		height: 16px
-		width: 16px
-		display: block
-		border-radius: 4px
-		background: url('../images/legacy-sprite.png') -562px -25px no-repeat
-		margin: 7px 0 0 5px
-		cursor: pointer
+		height: 16px!important
+		width: 16px!important
+		display: block!important
+		border-radius: 4px!important
+		background: url('../images/legacy-sprite.png') -562px -25px no-repeat!important
+		margin: 7px 0 0 5px!important
+		cursor: pointer!important
