--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -35,6 +35,15 @@
 					position: relative
 					cursor: pointer
 
+					.title
+						width: 100%
+						display: block
+						overflow: hidden
+						white-space: nowrap
+						text-overflow: ellipsis
+						text-align: center
+
+
 				// Group and quick action, slide in
 
 				div.slide-in
