--- a/css/eze.css
+++ b/css/eze.css
@@ -166,9 +166,10 @@
               height: auto;
               opacity: 0.8; }
         .eze .eze-table .eze-table-content ul li.item h2 {
-          font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
-          margin: 15px 0 8px 0;
-          display: inline-block; }
+          font: normal 18px/24px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
+          margin: 15px 0 3px 0;
+          display: inline-block;
+          width: 65%; }
           .eze .eze-table .eze-table-content ul li.item h2 a {
             border-bottom: 1px solid #e07a00;
             color: #e07a00; }
