--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -155,9 +155,10 @@
                                     opacity: 0.8
 
                         h2
-                            font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-                            margin: 15px 0 8px 0
+                            font: normal 18px/24px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+                            margin: 15px 0 3px 0
                             display: inline-block
+                            width: 65%
 
                             a
                                 border-bottom: 1px solid #e07a00
