Adds status to sitemap details

--- a/css/eze.css
+++ b/css/eze.css
@@ -754,6 +754,8 @@
         .eze .finder .actions .meta ul li {
           margin: 0 0 10px 0;
           font: bold 12px/12px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif; }
+          .eze .finder .actions .meta ul li .status-icon {
+            margin: 0 3px 0 0; }
       .eze .finder .actions .meta span {
         font: normal 11px/18px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
         display: block;
