--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -168,6 +168,9 @@
 				li
 					margin: 0 0 10px 0
 					font: bold 12px/12px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+
+					.status-icon
+						margin: 0 3px 0 0
 			
 			span
 				font: normal 11px/18px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
