--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -10,9 +10,9 @@
 		height: 27px
 		border-radius: 2px
 
-		&.saving
-			-moz-animation: autosave-highlight 1.5s linear infinite normal
-			-webkit-animation: autosave-highlight 1.5s linear infinite normal
+		&.saving img
+			margin: 0 5px 0 0
+			
 
 		p
 			float: left
