--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -107,6 +107,14 @@
 		&:hover
 			text-decoration: none
 
+	.icon-16
+		height: 16px
+		width: 16px
+
+	.icon-32
+		height: 32px
+		width: 32px
+
 	select, .chzn-container
 		margin-bottom: 10px
 		height: 25px
