--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -178,9 +178,12 @@
 				display: block
 				width: 100%
 				
-		.action-buttons li
+		.action-buttons > li
 			float: left
 			margin: 0 5px 10px 0
+
+		.btn-group.open .dropdown-menu
+			width: 220px
 	
 	
 	
