--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -62,6 +62,10 @@
 		margin-left: 5px
 		border-top: 4px solid #666
 
+	.btn-group.open .dropdown-menu
+		p
+			padding: 10px
+
 	.btn-mini
 		font-size: 11px
 
