--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -114,6 +114,11 @@
 				
 				&.dragged
 					z-index: 999
+
+				&.empty-node .has-children-arrow
+					opacity: 0.2
+					filter: alpha(opacity=50)
+
 				
 				&.clipboard a
 					color: rgba(0,0,0,0.3)
